# explorepy

./: CHANGELOG.rst  README.rst  pyproject.toml
docs/: conf.py  requirements.txt
examples/: clean_data_from_exg.py
installer/windows/: installer.cfg
src/explorepy/: __init__.py  _exceptions.py  command.py  csv_client.py  explore.py  filters.py  packet.py  parser.py  stream_processor.py  tools.py
src/explorepy/dashboard/: dashboard.py
