[build-system]
requires        = ['setuptools>=74.0']
build-backend   = 'setuptools.build_meta'

[project]
name    = 'explorepy'
version = "4.5.1"
license = { text = "MIT" }
readme = { file = "README.rst", content-type = "text/x-rst"}
authors = [
  { name = "MentaLab Hub", email = "support@mentab.org" },
]
urls = { Homepage = "https://github.com/Mentalab-hub/explorepy" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    'numpy==2.1.3',
    'scipy==1.17.1',
    'pyEDFlib==0.1.42',
    'click==7.1.2',
    'appdirs==1.4.4',
    'sentry_sdk==2.8.0',
    'mne',
    'eeglabio',
    'pandas',
    'pyserial',
    'pyyaml',
    'bleak==0.22.3',
    'pylsl==1.18.2',
    'numba']

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "pytest-mock==3.10.0",
    "pytest-html==3.2.0",
    "flake8==4.0.1",
    "isort==5.10.1"]

[project.scripts]
explorepy = "explorepy.cli:cli"

# bumpoversion config
[tool.bumpversion]
current_version = "4.5.1"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.rst"
search = "v{current_version}."
replace = "v{new_version}."

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "version = release = '{current_version}'"
replace = "version = release = '{new_version}'"

[[tool.bumpversion.files]]
filename = "src/explorepy/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "installer/windows/installer.cfg"
search = "explorepy=={current_version}"
replace = "explorepy=={new_version}"

[[tool.bumpversion.files]]
filename = "installer/windows/installer.cfg"
search = "version={current_version}"
replace = "version={new_version}"
